refactor: Rename project to Prairie Dog Run
Rename the project from "Prairie Dog Plantformer" to "Prairie Dog Run" across package.json, index.html, and metadata.json. This update aligns the project name with its intended theme and functionality.

Additionally, enhance the game's mechanics and content:
- Introduce new enemy types ('bat', 'bug', 'mole') and AI states ('circle', 'hidden', 'active') to diversify gameplay.
- Add a timer property to GameObject for more flexible AI logic.
- Implement coyote time for smoother jumping mechanics and a maximum number of lives for players.
- Add invincibility frames after taking damage to prevent instant re-death.
- Introduce a new collectible type ('bug') and update the Gemini prompt to suggest more varied enemy placement and types.
- Expand the game's audio capabilities with new sound effects and music cues, and initialize audio on startup.
- Introduce leaderboard functionality, including storing and displaying top scores, and qualifying runs.

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "prairie-dog-plantformer",
+  "name": "prairie-dog-run",
   "private": true,
   "version": "0.0.0",
   "type": "module",
